--- a/public/css/players/details.css
+++ b/public/css/players/details.css
@@ -48,10 +48,16 @@
   border-right: 1px solid rgba(0, 0, 0, 0.50);
   display: flex;
   align-items: center;
+  height: 100%;
   justify-content: center;
   margin-right: -7px;
   text-align: left;
   font-size: 1.2em;
+}
+.players-header-title  {
+  margin: none;
+  margin-bottom: 50%;
+  transform: translateY(-50%);
 }
 .details-header {
   background-color: rgb(212, 206, 206);
